--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "remix-template-remix",
+  "name": "remix-jokes-app",
   "private": true,
   "description": "",
   "license": "",
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
@@ -22,6 +25,7 @@
     "@remix-run/eslint-config": "^1.4.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "esbuild-register": "^3.3.3",
     "eslint": "^8.11.0",
     "prisma": "^3.14.0",
     "typescript": "^4.5.5"
